2007-05-22  Chris Toshok  <toshok@ximian.com>

	* compzilla/Makefile.am (content_DATA): install minimize.js.

	* compzilla/chrome/content/start.xul: load minimize.js.

	* compzilla/chrome/content/minimize.js: temporary hack.  we should
	either port compiz's or come up with the proper math for a smooth
	animation ourselves.

2007-05-22  Chris Toshok  <toshok@ximian.com>

	* compzilla/chrome/content/scale.js: so the reason this doesn't
	work is that the compzillaWindowContent stuff isn't absolutely
	positioned anymore.  force sw.style.position="absolute", and
	everything is happy.  also, remove all the debug spew.

2007-05-21  Chris Toshok  <toshok@ximian.com>

	* compzilla/chrome/skin/compzilla.css: add the opacity stuff for
	moving windows, and the focused title background color changing
	here.

	* compzilla/chrome/content/scale.js: work on this some more.  we
	now create another content node for the windows (which gets drawn
	properly), and we move that.  presently completely screwed for
	some reason, but at least we have live updating content in the
	scaled windows.

	* compzilla/src/compzillaWindow.cpp (AddContentNode): if we add a
	content node and we have a backing store, we need to explicitly
	draw that node.
	(RedrawContentNode): new method, split out the contents of the
	loop from WindowDamaged.
	(WindowDamaged): loop over the content nodes, calling
	RedrawContentNode.

	* compzilla/src/compzillaWindow.h (class compzillaWindow ): add
	RedrawContentNode method to explicity draw just one of our nodes.

	* compzilla/chrome/content/windowStack.js: use the property
	getters and log levels.

	* compzilla/chrome/content/start.js: use the property setter.

	* compzilla/chrome/content/frame.js: yay property getters/setters.
	and log levels.  and window-state for "focused".  also, get rid of
	the window moving opacity hack.  it's done via css now.

	* compzilla/chrome/content/content.js: yay property
	getters/setters.  and log levels.
