@@ -1,3 +1,8 @@
+2007-05-22  Chris Toshok  <toshok@hungry.com>
+
+	* compzilla/chrome/content/scale.js: use a constant for the
+	timeout, and use * instead of / for the width and height.
+
 2007-05-22  Chris Toshok  <toshok@ximian.com>
 
 	* compzilla/Makefile.am (content_DATA): install minimize.js.
